/* eslint-disable no-undef */
describe('Recorded suite', () => {
  it('Nav Test', async () => {
    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
    await element(by.id('nextBtn')).tap();

    await element(by.id('title1')).tap();
    await element(by.id('title2')).tap();
    await element(by.id('title3')).tap();
    await element(by.id('title4')).tap();
    await element(by.id('title5')).tap();
    await element(by.id('title6')).tap();
    await element(by.id('title7')).tap();
    await element(by.id('title8')).tap();
    await element(by.id('title9')).tap();
  });
});
